Eliminated warnings on maven build (in tests) and during startup; added seed data for SQL Server