@@ -1,11 +1,14 @@
 package gov.idaho.isp.saktrack.util;
 
+import gov.idaho.isp.saktrack.config.EventBuilder;
 import gov.idaho.isp.saktrack.domain.EventFlag;
 import gov.idaho.isp.saktrack.domain.SexualAssaultKit;
-import gov.idaho.isp.saktrack.config.EventBuilder;
-import java.time.LocalDate;
-import static org.junit.Assert.*;
 import org.junit.Test;
+
+import java.time.LocalDate;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 
 public class MilestoneUtilsTest {
 
@@ -17,11 +20,11 @@ public class MilestoneUtilsTest {
 
     kit.getMedicalDetails().setCollectionDate(LocalDate.now().minusDays(10L));
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtMedical(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtMedical(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.MEDICAL_SENT_TO_LE).eventDate(LocalDate.now().minusDays(5L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtMedical(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtMedical(kit).get());
   }
 
   @Test
@@ -32,12 +35,12 @@ public class MilestoneUtilsTest {
 
     kit.getMedicalDetails().setCollectionDate(LocalDate.now().minusDays(10L));
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtMedical(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtMedical(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.MEDICAL_SENT_TO_LE).eventDate(LocalDate.now().minusDays(5L)).build());
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.MEDICAL_SENT_TO_LE).eventDate(LocalDate.now().minusDays(3L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtMedical(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtMedical(kit).get());
   }
 
   @Test
@@ -48,11 +51,11 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.MEDICAL_SENT_TO_LE).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(5L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
   }
 
   @Test
@@ -63,12 +66,12 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.MEDICAL_SENT_TO_LE).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(5L)).build());
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(7L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeFromMedicalToLe(kit).get());
   }
 
   @Test
@@ -79,11 +82,11 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_SENT_FOR_ANALYSIS).eventDate(LocalDate.now().minusDays(5L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
   }
 
   @Test
@@ -94,12 +97,12 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_SENT_FOR_ANALYSIS).eventDate(LocalDate.now().minusDays(5L)).build());
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_SENT_FOR_ANALYSIS).eventDate(LocalDate.now().minusDays(3L)).build());
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
   }
 
   @Test
@@ -110,13 +113,13 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LE_RECEIVED_COLLECTED_KIT).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
 
     kit.getLeDetails().setMeetsSubmissionCriteria(Boolean.FALSE);
     kit.getLegalDetails().setProsecutorAgrees(Boolean.TRUE);
     kit.getLegalDetails().setReviewFinalized(LocalDate.now().minusDays(5L));
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtLawEnforcement(kit).get());
   }
 
   @Test
@@ -127,11 +130,10 @@ public class MilestoneUtilsTest {
 
     kit.addChainOfCustodyEvent(new EventBuilder().eventFlag(EventFlag.LAB_RECEIVED).eventDate(LocalDate.now().minusDays(10L)).build());
 
-    assertEquals(new Long(10), MilestoneUtils.getTimeAtLab(kit).get());
+    assertEquals(Long.valueOf(10), MilestoneUtils.getTimeAtLab(kit).get());
 
     kit.getLabDetails().setDateCompleted(LocalDate.now().minusDays(5L));
 
-    assertEquals(new Long(5), MilestoneUtils.getTimeAtLab(kit).get());
+    assertEquals(Long.valueOf(5), MilestoneUtils.getTimeAtLab(kit).get());
   }
-
 }
